fix widget deletion when they have spaces in the name